<resources>
    <string name="app_name">IoThoth</string>
    <string name="error_message">Hubo un error al intentar guardar</string>
    <string name="key_server_ip">url</string>
    <string name="l500px">&#xf26e;</string>
    <string name="accessible_icon">&#xf368;</string>
    <string name="accusoft">&#xf369;</string>
    <string name="acquisitions_incorporated">&#xf6af;</string>
    <string name="ad">&#xf641;</string>
    <string name="address_book">&#xf2b9;</string>
    <string name="address_card">&#xf2bb;</string>
    <string name="adjust">&#xf042;</string>
    <string name="adn">&#xf170;</string>
    <string name="adversal">&#xf36a;</string>
    <string name="affiliatetheme">&#xf36b;</string>
    <string name="air_freshener">&#xf5d0;</string>
    <string name="airbnb">&#xf834;</string>
    <string name="algolia">&#xf36c;</string>
    <string name="align_center">&#xf037;</string>
    <string name="align_justify">&#xf039;</string>
    <string name="align_left">&#xf036;</string>
    <string name="align_right">&#xf038;</string>
    <string name="alipay">&#xf642;</string>
    <string name="allergies">&#xf461;</string>
    <string name="amazon">&#xf270;</string>
    <string name="amazon_pay">&#xf42c;</string>
    <string name="ambulance">&#xf0f9;</string>
    <string name="american_sign_language_interpreting">&#xf2a3;</string>
    <string name="amilia">&#xf36d;</string>
    <string name="anchor">&#xf13d;</string>
    <string name="android">&#xf17b;</string>
    <string name="angellist">&#xf209;</string>
    <string name="angle_double_down">&#xf103;</string>
    <string name="angle_double_left">&#xf100;</string>
    <string name="angle_double_right">&#xf101;</string>
    <string name="angle_double_up">&#xf102;</string>
    <string name="angle_down">&#xf107;</string>
    <string name="angle_left">&#xf104;</string>
    <string name="angle_right">&#xf105;</string>
    <string name="angle_up">&#xf106;</string>
    <string name="angry">&#xf556;</string>
    <string name="angrycreative">&#xf36e;</string>
    <string name="angular">&#xf420;</string>
    <string name="ankh">&#xf644;</string>
    <string name="app_store">&#xf36f;</string>
    <string name="app_store_ios">&#xf370;</string>
    <string name="apper">&#xf371;</string>
    <string name="apple">&#xf179;</string>
    <string name="apple_alt">&#xf5d1;</string>
    <string name="apple_pay">&#xf415;</string>
    <string name="archive">&#xf187;</string>
    <string name="archway">&#xf557;</string>
    <string name="arrow_alt_circle_down">&#xf358;</string>
    <string name="arrow_alt_circle_left">&#xf359;</string>
    <string name="arrow_alt_circle_right">&#xf35a;</string>
    <string name="arrow_alt_circle_up">&#xf35b;</string>
    <string name="arrow_circle_down">&#xf0ab;</string>
    <string name="arrow_circle_left">&#xf0a8;</string>
    <string name="arrow_circle_right">&#xf0a9;</string>
    <string name="arrow_circle_up">&#xf0aa;</string>
    <string name="arrow_down">&#xf063;</string>
    <string name="arrow_left">&#xf060;</string>
    <string name="arrow_right">&#xf061;</string>
    <string name="arrow_up">&#xf062;</string>
    <string name="arrows_alt">&#xf0b2;</string>
    <string name="arrows_alt_h">&#xf337;</string>
    <string name="arrows_alt_v">&#xf338;</string>
    <string name="artstation">&#xf77a;</string>
    <string name="assistive_listening_systems">&#xf2a2;</string>
    <string name="asterisk">&#xf069;</string>
    <string name="asymmetrik">&#xf372;</string>
    <string name="at">&#xf1fa;</string>
    <string name="atlas">&#xf558;</string>
    <string name="atlassian">&#xf77b;</string>
    <string name="atom">&#xf5d2;</string>
    <string name="audible">&#xf373;</string>
    <string name="audio_description">&#xf29e;</string>
    <string name="autoprefixer">&#xf41c;</string>
    <string name="avianex">&#xf374;</string>
    <string name="aviato">&#xf421;</string>
    <string name="award">&#xf559;</string>
    <string name="aws">&#xf375;</string>
    <string name="baby">&#xf77c;</string>
    <string name="baby_carriage">&#xf77d;</string>
    <string name="backspace">&#xf55a;</string>
    <string name="backward">&#xf04a;</string>
    <string name="bacon">&#xf7e5;</string>
    <string name="bacteria">&#xe059;</string>
    <string name="bacterium">&#xe05a;</string>
    <string name="bahai">&#xf666;</string>
    <string name="balance_scale">&#xf24e;</string>
    <string name="balance_scale_left">&#xf515;</string>
    <string name="balance_scale_right">&#xf516;</string>
    <string name="ban">&#xf05e;</string>
    <string name="band_aid">&#xf462;</string>
    <string name="bandcamp">&#xf2d5;</string>
    <string name="barcode">&#xf02a;</string>
    <string name="bars">&#xf0c9;</string>
    <string name="baseball_ball">&#xf433;</string>
    <string name="basketball_ball">&#xf434;</string>
    <string name="bath">&#xf2cd;</string>
    <string name="battery_empty">&#xf244;</string>
    <string name="battery_full">&#xf240;</string>
    <string name="battery_half">&#xf242;</string>
    <string name="battery_quarter">&#xf243;</string>
    <string name="battery_three_quarters">&#xf241;</string>
    <string name="battle_net">&#xf835;</string>
    <string name="bed">&#xf236;</string>
    <string name="beer">&#xf0fc;</string>
    <string name="behance">&#xf1b4;</string>
    <string name="behance_square">&#xf1b5;</string>
    <string name="bell">&#xf0f3;</string>
    <string name="bell_slash">&#xf1f6;</string>
    <string name="bezier_curve">&#xf55b;</string>
    <string name="bible">&#xf647;</string>
    <string name="bicycle">&#xf206;</string>
    <string name="biking">&#xf84a;</string>
    <string name="bimobject">&#xf378;</string>
    <string name="binoculars">&#xf1e5;</string>
    <string name="biohazard">&#xf780;</string>
    <string name="birthday_cake">&#xf1fd;</string>
    <string name="bitbucket">&#xf171;</string>
    <string name="bitcoin">&#xf379;</string>
    <string name="bity">&#xf37a;</string>
    <string name="black_tie">&#xf27e;</string>
    <string name="blackberry">&#xf37b;</string>
    <string name="blender">&#xf517;</string>
    <string name="blender_phone">&#xf6b6;</string>
    <string name="blind">&#xf29d;</string>
    <string name="blog">&#xf781;</string>
    <string name="blogger">&#xf37c;</string>
    <string name="blogger_b">&#xf37d;</string>
    <string name="bluetooth">&#xf293;</string>
    <string name="bluetooth_b">&#xf294;</string>
    <string name="bold">&#xf032;</string>
    <string name="bolt">&#xf0e7;</string>
    <string name="bomb">&#xf1e2;</string>
    <string name="bone">&#xf5d7;</string>
    <string name="bong">&#xf55c;</string>
    <string name="book">&#xf02d;</string>
    <string name="book_dead">&#xf6b7;</string>
    <string name="book_medical">&#xf7e6;</string>
    <string name="book_open">&#xf518;</string>
    <string name="book_reader">&#xf5da;</string>
    <string name="bookmark">&#xf02e;</string>
    <string name="bootstrap">&#xf836;</string>
    <string name="border_all">&#xf84c;</string>
    <string name="border_none">&#xf850;</string>
    <string name="border_style">&#xf853;</string>
    <string name="bowling_ball">&#xf436;</string>
    <string name="box">&#xf466;</string>
    <string name="box_open">&#xf49e;</string>
    <string name="box_tissue">&#xe05b;</string>
    <string name="boxes">&#xf468;</string>
    <string name="braille">&#xf2a1;</string>
    <string name="brain">&#xf5dc;</string>
    <string name="bread_slice">&#xf7ec;</string>
    <string name="briefcase">&#xf0b1;</string>
    <string name="briefcase_medical">&#xf469;</string>
    <string name="broadcast_tower">&#xf519;</string>
    <string name="broom">&#xf51a;</string>
    <string name="brush">&#xf55d;</string>
    <string name="btc">&#xf15a;</string>
    <string name="buffer">&#xf837;</string>
    <string name="bug">&#xf188;</string>
    <string name="building">&#xf1ad;</string>
    <string name="bullhorn">&#xf0a1;</string>
    <string name="bullseye">&#xf140;</string>
    <string name="burn">&#xf46a;</string>
    <string name="buromobelexperte">&#xf37f;</string>
    <string name="bus">&#xf207;</string>
    <string name="bus_alt">&#xf55e;</string>
    <string name="business_time">&#xf64a;</string>
    <string name="buy_n_large">&#xf8a6;</string>
    <string name="buysellads">&#xf20d;</string>
    <string name="calculator">&#xf1ec;</string>
    <string name="calendar">&#xf133;</string>
    <string name="calendar_alt">&#xf073;</string>
    <string name="calendar_check">&#xf274;</string>
    <string name="calendar_day">&#xf783;</string>
    <string name="calendar_minus">&#xf272;</string>
    <string name="calendar_plus">&#xf271;</string>
    <string name="calendar_times">&#xf273;</string>
    <string name="calendar_week">&#xf784;</string>
    <string name="camera">&#xf030;</string>
    <string name="camera_retro">&#xf083;</string>
    <string name="campground">&#xf6bb;</string>
    <string name="canadian_maple_leaf">&#xf785;</string>
    <string name="candy_cane">&#xf786;</string>
    <string name="cannabis">&#xf55f;</string>
    <string name="capsules">&#xf46b;</string>
    <string name="car">&#xf1b9;</string>
    <string name="car_alt">&#xf5de;</string>
    <string name="car_battery">&#xf5df;</string>
    <string name="car_crash">&#xf5e1;</string>
    <string name="car_side">&#xf5e4;</string>
    <string name="caravan">&#xf8ff;</string>
    <string name="caret_down">&#xf0d7;</string>
    <string name="caret_left">&#xf0d9;</string>
    <string name="caret_right">&#xf0da;</string>
    <string name="caret_square_down">&#xf150;</string>
    <string name="caret_square_left">&#xf191;</string>
    <string name="caret_square_right">&#xf152;</string>
    <string name="caret_square_up">&#xf151;</string>
    <string name="caret_up">&#xf0d8;</string>
    <string name="carrot">&#xf787;</string>
    <string name="cart_arrow_down">&#xf218;</string>
    <string name="cart_plus">&#xf217;</string>
    <string name="cash_register">&#xf788;</string>
    <string name="cat">&#xf6be;</string>
    <string name="cc_amazon_pay">&#xf42d;</string>
    <string name="cc_amex">&#xf1f3;</string>
    <string name="cc_apple_pay">&#xf416;</string>
    <string name="cc_diners_club">&#xf24c;</string>
    <string name="cc_discover">&#xf1f2;</string>
    <string name="cc_jcb">&#xf24b;</string>
    <string name="cc_mastercard">&#xf1f1;</string>
    <string name="cc_paypal">&#xf1f4;</string>
    <string name="cc_stripe">&#xf1f5;</string>
    <string name="cc_visa">&#xf1f0;</string>
    <string name="centercode">&#xf380;</string>
    <string name="centos">&#xf789;</string>
    <string name="certificate">&#xf0a3;</string>
    <string name="chair">&#xf6c0;</string>
    <string name="chalkboard">&#xf51b;</string>
    <string name="chalkboard_teacher">&#xf51c;</string>
    <string name="charging_station">&#xf5e7;</string>
    <string name="chevron_right">&#xf054;</string>
    <string name="cog">&#xf013;</string>
    <string name="home">&#xf015;</string>
    <string name="images">&#xf302;</string>
    <string name="lock">&#xf023;</string>
    <string name="save">&#xf0c7;</string>
    <string name="times">&#xf00d;</string>
    <string name="trash">&#xf1f8;</string>
    <string name="wifi">&#xf1eb;</string>
    <string name="image_des_perfil_photo">perfil photo</string>
    <string name="gadget_name">Nombre del dispositivo</string>
    <string name="online">Online</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="delete_gadget">Eliminar dispositivo</string>
    <string name="save_gadget">Guardar cambios</string>
    <string name="wifi_dialog">Wi-Fi asignado:</string>
    <string name="sync_wifi">Sincronizar Wi-Fi</string>
    <string name="update_gadget">Actualizar dispositivo</string>
    <string name="wifi_selected">SSID Wifi selecionado</string>
    <string name="continue_to_next">Continuar</string>
    <string name="wifi_password">Contraseña</string>
</resources>