<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/close_gadget_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/update_gadget"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form_gadget_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gadget_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gadget_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gadget_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLength="17"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/copyLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/wifi_dialog" />

                <TextView
                    android:id="@+id/wifi_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    tools:text="Tukum" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/save_gadget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/fa"
                android:text="@string/save"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/save_gadget" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wifi_gadget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/fa"
                android:text="@string/wifi"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/sync_wifi" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_gadget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/fa"
                android:text="@string/trash"
                android:textAlignment="center"
                android:textColor="@color/error"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/delete_gadget"
                android:textColor="@color/error" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="8dp" />
    </LinearLayout>
</layout>