<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/scan_wifi_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/fa"
            android:gravity="center_vertical"
            android:text="@string/wifi"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wifi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ACAADEG" />

            <TextView
                android:id="@+id/wifi_capability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="WP2-SKD" />
        </LinearLayout>

        <TextView
            android:id="@+id/wifi_is_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/fa"
            android:text="@string/lock"
            android:visibility="gone"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/wifi_is_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/fa"
            android:text="@string/home"
            android:visibility="gone"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/fa"
            android:text="@string/chevron_right"
            android:textSize="20sp" />
    </LinearLayout>
</layout>