<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/wifi_selected" />

            <TextView
                android:id="@+id/wifi_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textStyle="bold"
                tools:text="Tukum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wifi_password_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_visibility"
                android:layout_height="wrap_content"
                android:hint="@string/wifi_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wifi_password_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/save_wifi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/fa"
                android:text="@string/save"
                android:textAlignment="center"
                android:textSize="24sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/continue_to_next" />

        </LinearLayout>

    </LinearLayout>
</layout>