<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/gradient_drawable"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/up_button_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/fa"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <ImageView
            android:id="@+id/flash_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/cd_flash_button"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flash" />

        <TextView
            android:id="@+id/gallery_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/fa"
            android:text="@string/images"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>