<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_photo_card"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_des_perfil_photo"
                app:srcCompat="@drawable/ic_account_circle"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="25dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gadget_name"
            app:layout_constraintStart_toEndOf="@+id/profile_photo_card"
            app:layout_constraintTop_toTopOf="@+id/profile_photo_card"
            tools:text="Eduardo" />

        <TextView
            android:id="@+id/gadget_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_photo_card"
            app:layout_constraintStart_toEndOf="@+id/profile_photo_card"
            tools:text="Porton" />

        <TextView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/fa"
            android:text="@string/cog"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_photo_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_photo_card" />

        <View
            android:id="@+id/divider"
            style="@style/Widget.LunchTray.Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gadget_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/online_card_view"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="#009688"
            android:padding="5dp"
            android:visibility="visible"
            app:cardBackgroundColor="@color/success"
            app:cardCornerRadius="250dp"
            app:layout_constraintBottom_toBottomOf="@+id/gadget_name"
            app:layout_constraintStart_toEndOf="@+id/gadget_name"
            app:layout_constraintTop_toTopOf="@+id/gadget_name">

            <TextView
                android:id="@+id/online"
                android:layout_width="58dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/online"
                android:textColor="@color/white"
                tools:text="Online" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>